--- a/style.css
+++ b/style.css
@@ -44,18 +44,21 @@ table {
 
 /* ---------------------------------------- */
 
-body, html {
+body {
 	font-family: sans-serif;
+	overflow: hidden;
+	margin-bottom: 100px;
+	background-color: aliceblue;
 }
 
-.page-container {
-  display: flex;
-  flex-direction: column;
-	height: 100vh;
+.btn {
+	border-radius: 10px;
+	font-size: 20px;
+	border: none;
+	padding: 5px 10px 5px 10px;
 }
 
 .header {
-	height: 10%;
 	background-color: white;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -67,6 +70,7 @@ body, html {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 30px;
 }
 
 #header-title {
@@ -74,13 +78,8 @@ body, html {
 	font-weight: bold;
 }
 
-#login {
-	border: none;
+.login {
 	background-color: rgba(138, 43, 226, 0.8);
-	width: 200px;
-	height: 40px;
-	border-radius: 20px;
-	font-size: 1.5rem;
 	font-weight: bold;
 	color: white;
 }
@@ -88,4 +87,38 @@ body, html {
 .main-body {
 	flex-grow: 1;
 	background-color: aliceblue;
+	margin: 50px 300px 100px 300px;
+	text-align: center;
+}
+
+.add-book {
+	background-color: aqua;
+}
+
+.books-container {
+	padding: 75px;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	gap: 20px;
+}
+
+.book {
+	background-color: rgba(255, 255, 255, 1);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px;
+	height: 200px;
+	border-radius: 10px;
+	font-size: 20px;
+}
+
+.author {
+	font-weight: bold;
+}
+
+.has-read {
+	background-color: rgba(0, 255, 0, 0.5);
+	width: 75%;
 }
