--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ body {
 }
 
 .form-container {
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	position: fixed;
